--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p> His first picture book “The Lotus Seed” (text by Sherry Garland / Houghton Mifflin Harcourt)
           has sold more than 250,000 copies worldwide, and has been commissioned by such clients as
           Royal Mail to do Christmas Stamp Collection in 2006, and Starbucks for Worldwide
-          Holiday Promotion “Pass the Cheer” in 2007.</p>
+          Holiday Promotion “Pass the Cheer” in 2007.
         </p>
       </div>
       <div class="timeline">
@@ -297,13 +297,14 @@
         <hr class="line">
       </div>
       <p>Tatsuro Kiuchi currently lives and works in Tokyo, Japan.</p>
-      <p>
-        His illustration works can be found at <a id="tribute-link" href="https://tatsurokiuchi.com/" target="_blank">a
+      <p class="end">
+        His illustration works can be found at <a id="tribute-link" href="https://tatsurokiuchi.com/" target="_blank"
+          rel="noopener noreferrer">a
           separate site</a>.
       </p>
-      <br>
     </div>
   </div>
+
 </body>
 
 </html>
